# toy-transaction-engine

./: Cargo.toml  README.md  rust-toolchain.toml
src/: cli.rs  csv.rs  main.rs  prelude.rs  setup.rs  transaction.rs  transaction_engine.rs
test_data/: input_from_pdf.csv
