[package]
name = "payment_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4"
dashmap = "5.3"
flume = "0.10"
csv = "1.1"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.clap]
version = "3"
features = ["derive"]

[dependencies.simplelog]
version = "0.12"
features = ["paris"]

# Why pull from git instead of crates.io?
# The input CSV may not have a value for the amount column for
# transactions like disputes. For this case we need to use
# an `Option<Decimal>`, which [only recently](https://github.com/paupino/rust-decimal/pull/524) got `serde` support for.
# This change hasn't yet been released, therefore we use git.
[dependencies.rust_decimal]
git = "https://github.com/paupino/rust-decimal.git"
branch = "master"
features = ["serde-with-str"]

[dev-dependencies]
test-log = "0.2.10"
env_logger = "0.9.0"
